# recipe

./: .gitignore  Cargo.toml  README.md
migrations/2023-07-12-015439_init-database/: down.sql  up.sql
migrations/2025-01-08-043050_drop_notes_markdown/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: associations.rs  creates.rs  ingredient.rs  mod.rs  recipe.rs  recipe_ingredient.rs  recipe_tag.rs  tag.rs
src/subcommand/: create.rs  delete.rs  dump.rs  edit.rs  list.rs  mod.rs  print.rs  styles.css
src/subcommand/tag/: apply.rs  create.rs  delete.rs  edit.rs  list.rs  mod.rs
src/templates/: index.tmpl.md
src/ui/: mod.rs  placeholder-ingredients.txt  placeholder-instructions.md  recipe_editor.rs
