[package]
name = "recipe"
version = "0.2.1"
description = "Manage a recipe database"
authors = ["Bryan McClain <bamcclain10@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.3.11", features = ["derive", "env"] }
convert_case = "0.6.0"
crossterm = "0.28.1"
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = "2.1.0"
gtmpl = "0.7.1"
gtmpl_derive = "0.5.0"
gtmpl_value = "0.5.1"
horrorshow = "0.8.4"
inquire = { version = "0.6.2", features = ["editor"] }
itertools = "0.11.0"
markdown = "1.0.0-alpha.11"
open = "5.0.0"
paste = "1.0.13"
tempfile = "3.6.0"
termimad = "0.23.1"

# Bundle SQLite3 with the code so it compiles on Windows
[dependencies.libsqlite3-sys]
version = "*"
features = ["bundled"]
